new files added

--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,109 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TCa-aO-csa">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
+                                <color key="backgroundColor" red="1" green="0.40784313725490196" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="s8j-gG-2FK"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="Ult-ZI-vKc">
+                                <rect key="frame" x="0.0" y="65" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="oMX-Vw-pDo"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UZKEjzG.png" translatesAutoresizingMaskIntoConstraints="NO" id="9nM-gI-g1w">
+                                <rect key="frame" x="0.0" y="109" width="375" height="558"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="A0I-ij-wYI">
+                                <rect key="frame" x="20" y="129" width="335" height="518"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vv4-h1-R4C">
+                                    <size key="itemSize" width="103" height="103"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PokeCell" id="OBi-vQ-14f" customClass="PokeCell" customModule="Pokedex" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="103" height="103"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="103" height="103"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4" translatesAutoresizingMaskIntoConstraints="NO" id="ViC-ay-903">
+                                                    <rect key="frame" x="0.0" y="0.0" width="103" height="70"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.43455693493150682" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="70" id="B3F-sO-J9x"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Charmander" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oKt-hq-K74">
+                                                    <rect key="frame" x="0.0" y="78" width="103" height="25"/>
+                                                    <color key="backgroundColor" red="1" green="0.49327188729999999" blue="0.47399842739999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <fontDescription key="fontDescription" name="KohinoorTelugu-Medium" family="Kohinoor Telugu" pointSize="12"/>
+                                                    <color key="textColor" red="0.99265426397323608" green="0.99590712785720825" blue="0.99583667516708374" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="ViC-ay-903" secondAttribute="trailing" id="8aY-Jn-QJ2"/>
+                                            <constraint firstItem="oKt-hq-K74" firstAttribute="top" secondItem="ViC-ay-903" secondAttribute="bottom" constant="8" id="JNS-15-43C"/>
+                                            <constraint firstAttribute="bottom" secondItem="oKt-hq-K74" secondAttribute="bottom" id="MGL-qT-YEt"/>
+                                            <constraint firstAttribute="trailing" secondItem="oKt-hq-K74" secondAttribute="trailing" id="b3u-04-a7Z"/>
+                                            <constraint firstItem="ViC-ay-903" firstAttribute="top" secondItem="OBi-vQ-14f" secondAttribute="top" id="c4V-qJ-QgM"/>
+                                            <constraint firstItem="oKt-hq-K74" firstAttribute="leading" secondItem="OBi-vQ-14f" secondAttribute="leading" id="nfE-Sh-dng"/>
+                                            <constraint firstItem="ViC-ay-903" firstAttribute="leading" secondItem="OBi-vQ-14f" secondAttribute="leading" id="ulD-cA-Pax"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="nameLbl" destination="oKt-hq-K74" id="25b-5J-qEv"/>
+                                            <outlet property="thumbImg" destination="ViC-ay-903" id="6Wk-Cj-xAT"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Ult-ZI-vKc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="5iv-5O-YSe"/>
+                            <constraint firstItem="TCa-aO-csa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8dU-aK-VAq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="A0I-ij-wYI" secondAttribute="bottom" constant="20" id="9Xk-rA-gLk"/>
+                            <constraint firstItem="Ult-ZI-vKc" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="9n5-gd-Qda"/>
+                            <constraint firstItem="9nM-gI-g1w" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="DdH-BB-x8o"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="A0I-ij-wYI" secondAttribute="trailing" constant="20" id="Li3-PC-iph"/>
+                            <constraint firstItem="9nM-gI-g1w" firstAttribute="top" secondItem="Ult-ZI-vKc" secondAttribute="bottom" id="VPB-dC-ypn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9nM-gI-g1w" secondAttribute="trailing" id="ahz-mm-ijv"/>
+                            <constraint firstItem="TCa-aO-csa" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="bHI-Ka-4is"/>
+                            <constraint firstItem="TCa-aO-csa" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="bdq-XM-Oeg"/>
+                            <constraint firstItem="A0I-ij-wYI" firstAttribute="top" secondItem="Ult-ZI-vKc" secondAttribute="bottom" constant="20" id="jfX-vK-G2L"/>
+                            <constraint firstItem="Ult-ZI-vKc" firstAttribute="top" secondItem="TCa-aO-csa" secondAttribute="bottom" id="mHO-jA-Lgw"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="9nM-gI-g1w" secondAttribute="bottom" id="v1z-RE-jOk"/>
+                            <constraint firstItem="A0I-ij-wYI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="zcr-12-fbQ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="collection" destination="A0I-ij-wYI" id="K0G-tT-8XX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="24.800000000000001" y="31.934032983508249"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="4" width="120" height="120"/>
+        <image name="UZKEjzG.png" width="1920" height="1080"/>
+    </resources>
 </document>
